@@ -19,11 +19,11 @@
 
 #include "oprofile.h"
 
-extern uint dname_top;
-extern struct qstr **dname_stack;
-extern char * pool_pos;
-extern char * pool_start;
-extern char * pool_end;
+extern uint op_dname_top;
+extern struct qstr **op_dname_stack;
+extern char * op_pool_pos;
+extern char * op_pool_start;
+extern char * op_pool_end;
 
 uint do_hash(struct dentry *dentry, struct vfsmount *vfsmnt, struct dentry *root, struct vfsmount *rootmnt);
 
@@ -44,35 +44,35 @@ inline static uint name_hash(char const * name, uint len, uint parent)
 /* empty ascending dname stack */
 inline static void push_dname(struct qstr *dname)
 {
-	dname_stack[dname_top] = dname;
-	if (dname_top != DNAME_STACK_MAX)
-		dname_top++;
+	op_dname_stack[op_dname_top] = dname;
+	if (op_dname_top != DNAME_STACK_MAX)
+		op_dname_top++;
 	else
 		printk(KERN_ERR "oprofile: overflowed dname stack !\n");
 }
 
 inline static struct qstr *pop_dname(void)
 {
-	if (dname_top == 0)
+	if (op_dname_top == 0)
 		return NULL;
 
-	return dname_stack[--dname_top];
+	return op_dname_stack[--op_dname_top];
 }
 
 inline static uint alloc_in_pool(char const * str, uint len)
 {
-	char * place = pool_pos;
-	if (pool_pos + len + 1 >= pool_end)
+	char * place = op_pool_pos;
+	if (op_pool_pos + len + 1 >= op_pool_end)
 		return 0;
 
 	strcpy(place, str);
-	pool_pos += len + 1;
-	return place - pool_start;
+	op_pool_pos += len + 1;
+	return place - op_pool_start;
 }
 
 inline static char * get_from_pool(uint index)
 {
-	return pool_start + index;
+	return op_pool_start + index;
 }
 
 inline static int add_hash_entry(struct op_hash_index * entry, uint parent, char const * name, uint len)
